<resources>
    <string name="app_name">Choretracker</string>
    <!-- Name of the preferences file (used for shared preferences) -->
    <string name="preferences_file_name">AppPreferences</string>
    <!-- Strings related to login -->

    <string name="action_login">Kirjaudu sisään</string>
    <string name="prompt_user_email">Sähköposti</string>
    <string name="prompt_user_password">Salasana</string>
    <string name="action_create_user">Luo käyttäjä</string>
    <string name="action_join_group">Liity ryhmään</string>
    <string name="prompt_group_name">Ryhmän nimi</string>
    <string name="prompt_group_password">Ryhmän salasana</string>
    <string name="prompt_user_name">Nimi</string>
    <string name="action_create_group">Luo ryhmä</string>
    <string name="header_create_group">Luo ryhmä</string>
    <string name="header_join_group">Kirjoita ryhmän nimi ja salasana</string>
    <string name="action_join_existing_group">Liity valmiiseen ryhmään</string>
    <string name="header_join_group_select">Luo uusi alikäyttäjä</string>
    <string name="header2_join_group_select">Tai liity olemassa olevana käyttäjänä</string>


    <!-- Strings related to main -->
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">käyttäjänimi tähän</string>
    <string name="nav_header_subtitle">käyttäjän email jos on?</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Kirjaudu ulos</string>
    <string name="menu_home">Aloitus</string>
    <string name="menu_header_mytask">Omat tehtävä</string>

    <string name="muokkaa_nime">Muokkaa nimeä</string>
    <string name="muuta_salasanaa">Muuta Salasanaa</string>
    <string name="vaihda_oikeuksia">Vaihda oikeuksia</string>
    <string name="poista_j_seni">Poista jäseniä</string>
    <string name="ryhm_n_nimi_t_ss">ryhmän nimi tässä</string>
    <string name="ryhm_n_id">ryhmän id</string>

    <string name="aloitusruutu">Aloitus</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Tekijät">tekijät</string>
    <string name="toistuvus">Toistuvuus</string>

    <string name="ota_k_ytt_n_vanha_teht_v">Ota käyttöön vanha tehtävä</string>

    <string name="Create_Task">Luo uusi tehtävä</string>
    <string name="MyTasks">Omat tehtävät</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="luo_teht_v">Luo tehtävä</string>
    <string name="ryhm">Ryhmä</string>
    <string name="omat_teht_v_t">Omat tehtävät</string>
    <string name="etsi_teht_vi">Etsi tehtäviä</string>
    <string name="terve">Terve</string>

    <string name="testi">testi</string>
    <string name="anna_hakuehdot">Anna hakuehdot</string>
    <string name="etsi">Etsi</string>
    <string name="_1_3_kiireys">1_3 Kiireys</string>
    <string name="muokka_teht_v">Muokkaa tehtävää</string>
    <string name="teht_v_n_nimi">Tehtävän nimi</string>
    <string name="hakutulos">Hakutulos</string>
    <string name="btn_accept_select">Valitse</string>
    <string name="txt_login_failed">Kirjautuminen epäonnistui</string>
    <string name="text_mytask">Tässä pitäisi näkyä kaikki omat hommat ja niiden tilat</string>

    <string name="luotehtava">luotehtävä</string>
    <string name="kommentti">Kommentti</string>
    <string name="Btn_text_valitse_tekijat">Valitse tekijät</string>
    <string name="text_searchtask_progress">Ei työnalla - Työnalla - Valmis</string>
    <string name="hint_taskname">Tehtävän nimi</string>
    <string name="hint_task_description">Lisätietoja tehtävästä</string>
    <string name="etxt_task_desc2">homman lisätiedot</string>
    <string name="etxt_task_doers2">tekijät</string>
    <string name="header_automatic_login">Käynnistetään...</string>
    <string name="setting_auto_login">Log in automatically</string>

    <!-- API request requirements -->
    <string name="requirements_username">Käyttäjänimen pitää olla 2–21 merkkiä pitkä</string>
    <string name="requirements_password">Salasanan pitää olla 8–85 merkkiä pitkä</string>
    <string name="requirements_email">Sähköpostiosoitteen pitää olla 5–85 merkkiä pitkä</string>

    <!-- Error messages -->
    <string name="error_general">Tapahtui odottamaton virhe...</string>
    <string name="error_user_not_found">Käyttäjää ei löytynyt</string>
    <string name="error_incorrect_password">Väärä salasana</string>
    <string name="error_failed_to_enable_auto_login">Automaattisen kirjautumisen kytkeminen päälle ei onnistunut</string>
    <string name="error_auto_login_failed">Automaattinen kirjautuminen epäonnistui</string>
    <string name="error_invalid_username">Käyttäjänimi ei täytä vaatimuksia</string>
    <string name="error_invalid_password">Salasana ei täytä vaatimuksia</string>
    <string name="error_invalid_email">Sähköpostiosoite ei täytä vaatimuksia</string>

    <!-- Success messages -->
    <string name="success_login">Tervetuloa!</string>
    <string name="success_user_created">Käyttäjä luotu</string>
    <string name="header_create_user">Syötä nimi, sähköposti ja salasana</string>
    <string name="Logout">logout</string>
    <string name="lopetetaan">Lopetetaan</string>
    <string name="kirjaudutaan_ulos">Kirjaudutaan ulos...</string>
    <string name="kirjaudu_ulos">Kirjaudu ulos</string>

</resources>