<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.housework.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/EditGroup"
        android:name="com.example.housework.ui.Group.EditGroup"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/edit_group_fragment" />
    <fragment
        android:id="@+id/Create_task"
        android:name="com.example.housework.ui.task.CreateTask"
        android:label="@string/Create_Task"
        tools:layout="@layout/create_task_fragment" />

    <fragment
        android:id="@+id/mytasks"
        android:name="com.example.housework.ui.task.MyTasks"
        android:label="@string/MyTasks"
        tools:layout="@layout/mytask_fragment" />

    <fragment
        android:id="@+id/search_task"
        android:name="com.example.housework.ui.task.SearchTask"
        android:label="Searchtask"
        tools:layout="@layout/search_task_fragment" />



</navigation>